@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/Attic/perl-5.8.6-r5.ebuild,v 1.7 2005/07/06 20:23:07 plasmaroo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/Attic/perl-5.8.6-r5.ebuild,v 1.8 2005/07/07 18:51:54 corsair Exp $
 
 inherit eutils flag-o-matic toolchain-funcs multilib
 
@@ -17,7 +17,7 @@ LIBPERL="libperl.so.${PERLSLOT}.${SHORT_PV}"
 
 LICENSE="Artistic GPL-2"
 SLOT="0"
-KEYWORDS="alpha ~amd64 arm hppa ia64 m68k mips ppc ~ppc64 s390 sh sparc x86"
+KEYWORDS="alpha ~amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86"
 IUSE="berkdb debug doc gdbm ithreads perlsuid build minimal"
 PERL_OLDVERSEN="5.8.0 5.8.2 5.8.4 5.8.5"
 
