@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/libperl
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.70 2005/07/06 20:25:07 plasmaroo Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.71 2005/07/07 18:52:53 corsair Exp $
+
+  07 Jul 2005; Markus Rothe <corsair@gentoo.org> libperl-5.8.6-r1.ebuild:
+  Stable on ppc64
 
   06 Jul 2005; <plasmaroo@gentoo.org> libperl-5.8.6-r1.ebuild:
   Stable on IA64.
